--- a/src/app/Components/lista-correos/lista-correos.component.html
+++ b/src/app/Components/lista-correos/lista-correos.component.html
@@ -3,13 +3,26 @@
     <th>Leído</th>
     <th>Emisor</th>
     <th>Titulo</th>
+    <th>Responder</th>
   </tr>
-  <tr *ngFor="let correo of correos; index as i;">
-    <td>
-      <input type="radio" name="leido-{{i}}" [(ngModel)]="correo.leido" [value]=true> Si
-      <input type="radio" name="leido-{{i}}" [(ngModel)]="correo.leido" [value]=false> No
-    </td>
-    <td>{{correo.emisor}}</td>
-    <td>{{correo.titulo}}</td>
-  </tr>
+  <ng-container *ngFor="let correo of correos; index as i;">
+    <tr>
+      <td>
+        <input type="radio" name="leido-{{i}}" [(ngModel)]="correo.leido" [value]=true disabled> Si
+        <input type="radio" name="leido-{{i}}" [(ngModel)]="correo.leido" [value]=false disabled> No
+      </td>
+      <td>{{correo.emisor}}</td>
+      <td>{{correo.titulo}}</td>
+      <td>
+        <button (click)="clickResponder(correo)">Responder</button>
+      </td>
+    </tr>
+    <tr *ngIf="correo.responder">
+      <app-nuevo-correo [correo]="correo"></app-nuevo-correo>
+    </tr>
+  </ng-container>
+
 </table>
+
+<!--Primero realizaremos una prueba afuera-->
+
